--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     'PyYAML~=6.0.1',
     'jinja2~=3.1.3',
     'colorama~=0.4.6',
+    'furl~=2.1.3'
 ]
 authors = [
   { name="IotaSpencer / Ken Spencer", email="me@iotaspencer.me" },
