--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     'lastversion~=3.4.6',
     'aiohttp~=3.9.2',
     'click~=8.1.7',
+    'colorlog~=6.8.2',
     'pytest~=8.0.0',
     'setuptools~=59.6.0',
     'PyYAML~=6.0.1',
