--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -28,7 +28,7 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install pip==18.1
         pip install build
     - name: Build package
       run: python -m build
