--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     'PyYAML~=6.0.1',
     'jinja2~=3.1.3',
     'colorama~=0.4.6',
-    'furl~=2.1.3'
+    'furl~=2.1.3',
+    'requests~=2.31.0',
+    'requests_download~=0.1.2'
 ]
 authors = [
   { name="IotaSpencer / Ken Spencer", email="me@iotaspencer.me" },
