--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     'colorama~=0.4.6',
     'furl~=2.1.3',
     'requests~=2.31.0',
-    'requests_download~=0.1.2'
+    'download~=0.3.5'
 ]
 authors = [
   { name="IotaSpencer / Ken Spencer", email="me@iotaspencer.me" },
